alignment fix

--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@ body {
 .wrapper-upper {
     display: flex;
     flex-direction: column;
-    min-height: 15vh;
+    min-height: 10vh;
 }
 
 .background-image {
@@ -48,7 +48,7 @@ body {
 }
 
 .nav-wrapper {
-    padding: 50px;
+    padding: 25px;
 }
 
 .nav ul {
